# style-sync-server

./: .gitignore  CMakeLists.txt
configs/: database.config.cpp  database.config.h
docs/: README.txt
src/: main.cpp
src/models/accounts/: account.model.cpp  account.model.h
src/services/gRPC/: grpc.service.cpp  grpc.service.h
src/services/gRPC/protos/account/: account.grpc.pb.cc  account.grpc.pb.h  account.pb.cc  account.pb.h  account.proto
src/services/restful/: restful.service.cpp  restful.service.h
src/services/tcp/: tcp.service.cpp  tcp.service.h
